--- a/VGA/test_VGA.qsf
+++ b/VGA/test_VGA.qsf
@@ -64,5 +64,7 @@ set_global_assignment -name EDA_TEST_BENCH_FILE test_VGA_TB.v -section_id test_V
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name QIP_FILE clock.qip
+set_global_assignment -name QIP_FILE clock2.qip
+set_global_assignment -name QIP_FILE clock75.qip
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
