--- a/VGA/test_VGA.qsf
+++ b/VGA/test_VGA.qsf
@@ -44,9 +44,7 @@ set_global_assignment -name ORIGINAL_QUARTUS_VERSION 20.1.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "15:24:26  JANUARY 25, 2022"
 set_global_assignment -name LAST_QUARTUS_VERSION "20.1.1 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
-set_global_assignment -name EDA_SIMULATION_TOOL "Questa Intel FPGA (Verilog)"
-set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
-set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
+set_global_assignment -name EDA_SIMULATION_TOOL "<None>"
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_timing
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_symbol
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_signal_integrity
@@ -55,9 +53,6 @@ set_global_assignment -name VERILOG_FILE VGA_driver.v
 set_global_assignment -name VERILOG_FILE test_VGA_TB.v
 set_global_assignment -name VERILOG_FILE buffer_ram_dp.v
 set_global_assignment -name VERILOG_FILE test_VGA.v
-set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH test_VGA_TB -section_id eda_simulation
-set_global_assignment -name EDA_TEST_BENCH_NAME test_VGA_TB -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id test_VGA_TB
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME test_VGA_TB -section_id test_VGA_TB
 set_global_assignment -name EDA_TEST_BENCH_FILE test_VGA_TB.v -section_id test_VGA_TB
@@ -77,5 +72,5 @@ set_location_assignment PIN_143 -to VGA_Vsync_n
 set_location_assignment PIN_23 -to clk
 set_location_assignment PIN_72 -to clkout
 set_location_assignment PIN_91 -to rst
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name QIP_FILE clk220.qip
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
